split the week cal into 30 min interval, fixed the alignment, and time zone

--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -958,7 +958,7 @@ main {
 /* This is for the week view and to control the cell size */
 .calendar .scrollBody .backWeekBody .hourcell {
   position: relative;
-  height: 50px;
+  height: 25px;
   border-left: 1px solid var(--border-color);
   border-bottom: 1px solid var(--border-color);
   overflow: hidden;
